<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.OnBoarding5Fragment"
    android:background="@color/main_color3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/createAccount"
            android:text="@string/create_account"
            android:textColor="@color/main_color1"
            android:backgroundTint="@color/main_color2"
            android:textSize="18sp"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/connexion"
            android:text="@string/connexion"
            android:layout_marginTop="16dp"
            android:textColor="@color/main_color3"
            android:backgroundTint="@color/main_color1"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="64dp"
            android:text="@string/onboarding5"
            android:fontFamily="@font/font2"
            android:textSize="16sp"
            android:textColor="@color/main_color1"/>
    </LinearLayout>



</FrameLayout>